--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <header>
                 <img src="img/brand.svg" alt="">
                 <h2>
-                    A better way to build. 
+                    A better way to build. By TJCODE__
                 </h2>
                 <div class="socials">
                     <i class="fab fa-facebook-square"></i>
