--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <a href="#" class="btn">Buy now</a>
 
                <!-- mobile ham -->
-            <button class="ham" id="hamburger"> 
+            <div class="ham"> 
                 <i class="fas fa-bars"></i>
-            </button>
+            </div>
           
-            <div class="link-slide" id="links">
+            <div class="links show">
                 <div class="links-to">
                     <a href="#">Landings</a>
                     <a href="#">Pages</a>
@@ -205,6 +205,21 @@
     </footer>
 
 
- <script src="js/app.js"></script>
+ <script>
+     const  ham= document.querySelector(".ham");
+const  links = document.querySelector(".show");
+console.log(links);
+
+ham.addEventListener("click",function(){
+   if (links.classList.contains("show")){
+       links.classList.remove("show");
+   }
+   else{
+    links.classList.add("show");
+   }
+
+});
+
+ </script>
 </body>
 </html>
